--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
 			<artifactId>jlayer</artifactId>
 			<version>1.0.1</version>
 		</dependency>
+		<dependency>
+  			<groupId>net.bramp.ffmpeg</groupId>
+  			<artifactId>ffmpeg</artifactId>
+  			<version>0.6.2</version>
+		</dependency>
 	</dependencies>
 
     <build>
