--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,27 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
+                <artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>br.com.hconcessa.tts.generator.Main</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+				<!--
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -77,6 +95,7 @@
                         </goals>
                     </execution>
                 </executions>
+	-->
             </plugin>
         </plugins>
     </build>
